remove payout + bump SB3 + Java 21